--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,6 +1,8 @@
-@import "./base.scss";
-@import "./header.scss";
-@import "./main.scss";
-@import "./form.scss";
-@import "./form__radio.scss";
-@import "./form__checkbox.scss";
+ @import "./varible.scss";
+ @import "./mixins.scss";
+ @import "./base.scss";
+ @import "./header.scss";
+ @import "./main.scss";
+ @import "./form.scss";
+ @import "./form__radio.scss";
+ @import "./form__checkbox.scss";
