--- a/styles/form.scss
+++ b/styles/form.scss
@@ -6,6 +6,11 @@
 
 .form__item {
     position: relative;
+    @include for-small-mobile {
+        width: 90%;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
 }
 
 .form__item-input {
@@ -60,6 +65,11 @@
     &:active {
         background-color: #0b172a;
         color: #7A8F99;
+    }
+    @include for-small-mobile {
+        width: 90%;
+        margin-left: 10px;
+        margin-right: 10px;
     }
 }
 
