--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,33 +1,45 @@
     .main {
-        // display: flex;
         padding-bottom: 99px;
-    }
-    
-    .main__content {
         margin-left: 100px;
         margin-right: 92px;
         max-width: 440px;
         width: 100%;
         padding-top: 28px;
+        @include for-mobile {
+            margin-left: auto;
+            margin-right: auto;
+        }
+        @include for-small-mobile {
+            margin-left: 10px;
+            margin-right: 10px;
+        }
     }
     
-    .main__content-title {
+    .main__title {
         color: #FFFFFF;
         font-size: 36px;
         line-height: 48px;
         font-family: 'OpenSans', sans-serif;
         font-weight: bold;
         margin-top: 0;
+        @include for-small-mobile {
+            text-align: center;
+        }
     }
     
-    .main__content-items {
+    .main__items {
         position: relative;
         list-style: none;
         font-size: 16px;
         line-height: 24px;
+        @include for-small-mobile {
+            padding-left: 20px;
+            padding-right: 10px;
+            font-size: 12px;
+        }
     }
     
-    .main__content-item {
+    .main__items-item {
         padding-bottom: 15px;
         &::before {
             content: "";
@@ -49,25 +61,4 @@
             background-image: url("../img/check.png");
             background-repeat: no-repeat;
         }
-    }
-    
-    .main__images {
-        display: flex;
-        align-items: flex-end;
-        position: relative;
-        margin-top: 32px;
-    }
-    
-    .main__images-iphone {
-        max-width: 245px;
-        height: auto;
-        position: absolute;
-        bottom: 0;
-        left: -20px;
-    }
-    
-    .main__images-macbook {
-        max-width: 1063px;
-        height: auto;
-        justify-self: flex-end
     }
