--- a/styles/varible.scss
+++ b/styles/varible.scss
@@ -1,7 +1,6 @@
-// $colors: ( "white": #FFFFFF, "orange": #FA4A0C, "grey": #252B42, "light-grey": #E4E4E4, "silver": #737373, "silver-grey": #5C5C5C, "black": #000000, );
+$colors: ( "white": #ffffff, "blue": #0b172a, "light-blue": #7a8f99, "grey-blue": #212d3e, "green": #1C945D, "red": #e15433);
 $breakpoints-dasktop-large: 3000px;
 $breakpoints-tablet-large: 1024px;
 $breakpoints-tablet: 768px;
 $breakpoints-mobile: 640px;
 $breakpoints-small-mobile: 450px;
-// $weight: ("normal": 500, "bold": 700);
