--- a/styles/form__radio.scss
+++ b/styles/form__radio.scss
@@ -43,11 +43,11 @@
         padding-left: 40px;
         padding-right: 40px;
         line-height: 34px;
-        border: 1px solid #212d3e;
+        border: 1px solid map-get($colors, 'grey-blue');
         border-right: none;
         user-select: none;
         text-align: center;
-        background-color: #212d3e;
+        background-color: map-get($colors, 'grey-blue');
     }
     
     .form__radio-btn .form_radio-btn-item:first-child label {
@@ -56,20 +56,20 @@
     
     .form__radio-btn .form_radio-btn-item:last-child label {
         border-radius: 0 6px 6px 0;
-        border-right: 1px solid #212d3e;
+        border-right: 1px solid map-get($colors, 'grey-blue');
     }
     
     .form__radio-btn input[type=radio]:checked+label {
-        background: #0b172a;
-        border: 1px solid #1C945D;
-        color: #fff;
+        background: map-get($colors, 'blue');
+        border: 1px solid map-get($colors, 'green');
+        color: map-get($colors, 'white');
     }
     
     .form__radio-btn label:hover {
-        color: #fff;
+        color: map-get($colors, 'white');
     }
     
     .form__radio-btn input[type=radio]:disabled+label {
-        background: #efefef;
-        color: #666;
+        background: map-get($colors, 'white');
+        color: map-get($colors, 'light-blue');
     }
