--- a/styles/form.scss
+++ b/styles/form.scss
@@ -48,7 +48,7 @@
 }
 
 .form__btn {
-    margin-top: 32px;
+    margin-top: 16px;
     width: 100%;
     padding: 16px;
     color: map-get($colors, 'white');
@@ -70,6 +70,30 @@
         width: 90%;
         margin-left: 10px;
         margin-right: 10px;
+    }
+}
+
+.form__error-attention {
+    position: relative;
+    color: map-get($colors, 'white');
+    font-size: 16px;
+    line-height: 24px;
+    padding-top: 8px;
+    padding-right: 24px;
+    padding-bottom: 8px;
+    padding-left: 64px;
+    background-color: map-get($colors, 'red');
+    border: 1px solid map-get($colors, 'red');
+    border-radius: 4px;
+    &::before {
+        content: "";
+        position: absolute;
+        top: 20px;
+        left: 20.8px;
+        width: 17px;
+        height: 17px;
+        background-image: url("../img/attention.png");
+        background-repeat: no-repeat;
     }
 }
 
