--- a/styles/varible.scss
+++ b/styles/varible.scss
@@ -4,3 +4,4 @@ $breakpoints-tablet-large: 1024px;
 $breakpoints-tablet: 768px;
 $breakpoints-mobile: 640px;
 $breakpoints-small-mobile: 450px;
+$breakpoints-super-small-mobile: 399px;
